style/stardust.css
/* ... */
              #mypublic-student .main-wrapper .main-content .profile-info .column .title {
                margin-bottom: 11px; }
              #mypublic-student .main-wrapper .main-content .profile-info .column .toggle-info {
                -ms-flex-item-align: end;
                    align-self: flex-end;
                margin-top: -2.5rem;
                margin-bottom: 11px;
                color: #717171;
                cursor: pointer;
                background: none;
                border: none; }
                #mypublic-student .main-wrapper .main-content .profile-info .column .toggle-info i {
                  font-size: 2rem;
                  margin-left: .5rem; }
                #mypublic-student .main-wrapper .main-content .profile-info .column .toggle-info .show_more {
                  display: none; }
                #mypublic-student .main-wrapper .main-content .profile-info .column .toggle-info .show_less {
                  display: -ms-flexbox;
                  display: flex;
                  -ms-flex-align: center;
                      align-items: center; }
                #mypublic-student .main-wrapper .main-content .profile-info .column .toggle-info.show .show_more {
                  display: -ms-flexbox;
                  display: flex;
                  -ms-flex-align: center;
                      align-items: center; }
                #mypublic-student .main-wrapper .main-content .profile-info .column .toggle-info.show .show_less {
                  display: none; }
              #mypublic-student .main-wrapper .main-content .profile-info .column .info-list {
                list-style: none;
                padding: 0; }
                #mypublic-student .main-wrapper .main-content .profile-info .column .info-list [data-input="knowledge"],
                #mypublic-student .main-wrapper .main-content .profile-info .column .info-list [data-input="interests"],
                #mypublic-student .main-wrapper .main-content .profile-info .column .info-list [data-input="aim"],
                #mypublic-student .main-wrapper .main-content .profile-info .column .info-list [data-input="phone2"],
                #mypublic-student .main-wrapper .main-content .profile-info .column .info-list [data-input="skype"] {
                  display: none; }
                #mypublic-student .main-wrapper .main-content .profile-info .column .info-list li {
                  margin-top: 22px;
                  display: -ms-flexbox;
                  display: flex;
                  -ms-flex-direction: column;
                      flex-direction: column; }
                  #mypublic-student .main-wrapper .main-content .profile-info .column .info-list li .input {
                    min-height: 41px;
                    padding: 3px 3px 10px;
                    width: 100%;
                    border: none;
                    font-size: 18px; }
                  #mypublic-student .main-wrapper .main-content .profile-info .column .info-list li.info .input {
                    border-bottom: 2px solid #19284f;
                    color: #717171;
                    padding-bottom: 10px;
                    outline: none; }
                  #mypublic-student .main-wrapper .main-content .profile-info .column .info-list li.info .input:-webkit-autofill {
                    -webkit-box-shadow: 0 0 0 30px white inset; }
                  #mypublic-student .main-wrapper .main-content .profile-info .column .info-list li.info .input-label {
                    font-size: 12px;
                    color: #19284f;
                    margin-top: 8px; }
                  #mypublic-student .main-wrapper .main-content .profile-info .column .info-list li.info.submit {
                    -ms-flex-align: end;
                        align-items: flex-end; }
                    #mypublic-student .main-wrapper .main-content .profile-info .column .info-list li.info.submit .btn-blue {
                      margin-top: 23px;
                      width: 140px;
                      cursor: pointer; }
                  #mypublic-student .main-wrapper .main-content .profile-info .column .info-list li.warning {
                    font-weight: normal; }
                    #mypublic-student .main-wrapper .main-content .profile-info .column .info-list li.warning .input {
                      border-bottom: 2px solid #ffa500;
                      color: #717171;
                      padding-bottom: 10px;
                      outline: none; }
                    #mypublic-student .main-wrapper .main-content .profile-info .column .info-list li.warning .input:-webkit-autofill {
                      -webkit-box-shadow: 0 0 0 30px white inset; }
                    #mypublic-student .main-wrapper .main-content .profile-info .column .info-list li.warning .input-label {
                      display: block;
                      width: 100%;
                      font-size: 12px;
                      margin-top: 8px; }
                      #mypublic-student .main-wrapper .main-content .profile-info .column .info-list li.warning .input-label .warning {
                        font-weight: normal;
                        display: block;
                        float: right;
                        text-align: right;
                        color: #ffa500; }
                    #mypublic-student .main-wrapper .main-content .profile-info .column .info-list li.warning.submit {
                      -ms-flex-align: end;
                          align-items: flex-end; }
                      #mypublic-student .main-wrapper .main-content .profile-info .column .info-list li.warning.submit .btn-blue {
                        margin-top: 23px;
                        width: 140px;
                        cursor: pointer; }
/* ... */

